--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
