--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
